--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -274,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "opengl",
+   "display_name": "torch19",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
