--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,13 +469,11 @@
     "        # X shape: (bs, n_features)\n",
     "\n",
     "        for idx, (w, b, act_func) in enumerate(zip(params['w'], params['b'], params['act_func'])):\n",
-    "            # print('forward idx:', idx, 'X shape:', X.shape, 'w', w[0])\n",
     "            if idx == 0:\n",
     "                I = np.matmul(X, w) + b\n",
     "            else:\n",
     "                I = np.matmul(Y, w) + b\n",
     "            Y = act_func.forward(I)\n",
-    "            # print('idx:', idx, 'I shape:', I.shape, 'Y shape:', Y.shape)\n",
     "            forward_saved['I'].append(I)\n",
     "            forward_saved['Y'].append(Y)\n",
     "\n",
@@ -513,6 +511,8 @@
     "         \n",
     "            # prev_layer_Y.T -> (n_layer[n-1], bs), delta -> (bs, n_layer[n])\n",
     "            dW = norm_factor * np.matmul(prev_layer_Y.T, delta)    \n",
+    "\n",
+    "            # d_bias 實際上是 delta 對一個全部為 1 的矩陣做矩陣乘法，所以直接化簡為 summation\n",
     "            db = norm_factor * np.sum(delta, axis=0, keepdims=True)\n",
     "    \n",
     "            params_delta['W'].append(dW)\n",
